--- a/114232_Sudip_POC/pom.xml
+++ b/114232_Sudip_POC/pom.xml
@@ -55,6 +55,17 @@
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.4.0</version>
+          <plugins>
+
+         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.5.0</version>
+          <configuration>
+               <suiteXmlFiles>
+              <suiteXmlFile>testng.xml</suiteXmlFile>
+                <suiteXmlFiles>
+          </configuration>
         </plugin>
         <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
